package main

import (
	"fmt"
	"time"
	
	barspb "github.com/AmpyFin/ampy-proto/v2/gen/go/ampy/bars/v1"
	commonpb "github.com/AmpyFin/ampy-proto/v2/gen/go/ampy/common/v1"
	"google.golang.org/protobuf/proto"
	"google.golang.org/protobuf/types/known/timestamppb"
)

func main() {
	fmt.Println("üß™ Testing ampy-proto Go functionality...")
	
	// Create a realistic financial bar
	now := time.Now()
	bar := &barspb.Bar{
		Security: &commonpb.SecurityId{
			Symbol: "AAPL",
			Mic:    "XNAS",
		},
		Start: timestamppb.New(now.Add(-time.Hour)),
		End:   timestamppb.New(now),
		Open: &commonpb.Decimal{
			Scaled: 1923450, // $192.3450
			Scale:  4,
		},
		High: &commonpb.Decimal{
			Scaled: 1925600, // $192.5600
			Scale:  4,
		},
		Low: &commonpb.Decimal{
			Scaled: 1922200, // $192.2200
			Scale:  4,
		},
		Close: &commonpb.Decimal{
			Scaled: 1924100, // $192.4100
			Scale:  4,
		},
		Volume: 184230,
		TradeCount: 1250,
		Adjusted: false,
		EventTime: timestamppb.New(now),
		IngestTime: timestamppb.New(now.Add(time.Second)),
	}
	
	// Test serialization
	data, err := proto.Marshal(bar)
	if err != nil {
		fmt.Printf("‚ùå Serialization failed: %v\n", err)
		return
	}
	fmt.Printf("‚úÖ Serialized %d bytes\n", len(data))
	
	// Test deserialization
	deserializedBar := &barspb.Bar{}
	err = proto.Unmarshal(data, deserializedBar)
	if err != nil {
		fmt.Printf("‚ùå Deserialization failed: %v\n", err)
		return
	}
	
	// Verify data integrity
	if deserializedBar.Security.Symbol != "AAPL" {
		fmt.Printf("‚ùå Symbol mismatch: %s != AAPL\n", deserializedBar.Security.Symbol)
		return
	}
	
	if deserializedBar.Close.Scaled != 1924100 {
		fmt.Printf("‚ùå Close price mismatch: %d != 1924100\n", deserializedBar.Close.Scaled)
		return
	}
	
	if deserializedBar.Volume != 184230 {
		fmt.Printf("‚ùå Volume mismatch: %d != 184230\n", deserializedBar.Volume)
		return
	}
	
	fmt.Printf("‚úÖ AAPL bar: $%.4f (Volume: %d)\n", 
		float64(deserializedBar.Close.Scaled)/float64(1e4), 
		deserializedBar.Volume)
	
	// Test batch functionality
	batch := &barspb.BarBatch{
		Bars: []*barspb.Bar{bar},
	}
	
	batchData, err := proto.Marshal(batch)
	if err != nil {
		fmt.Printf("‚ùå Batch serialization failed: %v\n", err)
		return
	}
	
	deserializedBatch := &barspb.BarBatch{}
	err = proto.Unmarshal(batchData, deserializedBatch)
	if err != nil {
		fmt.Printf("‚ùå Batch deserialization failed: %v\n", err)
		return
	}
	
	if len(deserializedBatch.Bars) != 1 {
		fmt.Printf("‚ùå Batch size mismatch: %d != 1\n", len(deserializedBatch.Bars))
		return
	}
	
	fmt.Printf("‚úÖ Batch test passed: %d bars\n", len(deserializedBatch.Bars))
	fmt.Println("üéâ All ampy-proto Go tests passed!")
}
